# cpp-shadowsocker-vpn-server

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: deploy.yml
src/: crypto.cpp  crypto.hpp  main.cpp  server.cpp  server.hpp
